--- a/package.json
+++ b/package.json
@@ -1,28 +1,24 @@
 {
-  "name": "codesandbox-astro-solidjs-playground",
-  "version": "1.0.0",
-  "main": "src/pages/index.astro",
-  "type": "module",
-  "license": "MIT",
-  "dependencies": {
-    "@astrojs/renderer-solid": "0.4.0",
-    "astro": "0.24.3",
-    "normalize.css": "8.0.1",
-    "prettier-plugin-astro": "0.0.12",
-    "sanitize.css": "13.0.0",
-    "solid-js": "1.3.13"
-  },
-  "scripts": {
-    "start": "astro dev",
-    "build": "astro build"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.21"
-  },
-  "keywords": [
-    "astro",
-    "settlers2",
-    "vite"
-  ],
-  "description": "Astro + SolidJS running on CodeSandbox with some subprojects developed into it."
+	"name": "codesandbox-astro-solidjs-playground",
+	"version": "1.0.0",
+	"main": "src/pages/index.astro",
+	"type": "module",
+	"license": "MIT",
+	"dependencies": {
+		"@astrojs/renderer-solid": "0.4.0",
+		"astro": "0.24.3",
+		"normalize.css": "8.0.1",
+		"prettier-plugin-astro": "0.0.12",
+		"sanitize.css": "13.0.0",
+		"solid-js": "1.3.13"
+	},
+	"scripts": {
+		"start": "astro dev",
+		"build": "astro build"
+	},
+	"devDependencies": {
+		"@types/node": "^17.0.21"
+	},
+	"keywords": ["astro", "settlers2", "solidjs", "vite"],
+	"description": "Astro + SolidJS running on CodeSandbox with some subprojects developed into it."
 }
